KARAF-7976: Remove specs